// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  name="test title"
  placeholder="Type here"
  rows="5"
/>
`;

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element with all props 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  defaultValue="default value"
  name="name"
  placeholder="placeholder"
  rows={4}
/>
`;

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element with props defaultvalue 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  defaultValue="default value"
  name="test title"
  placeholder="Type here"
  rows="5"
/>
`;

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element with props name 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  name="name"
  placeholder="Type here"
  rows="5"
/>
`;

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element with props placeholder 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  name="test title"
  placeholder="placeholder"
  rows="5"
/>
`;

exports[`AnswerTextArea for form with default values for rows and placeholder renders an element with props sizes 1`] = `
<textarea
  className="AnswerTextArea__Answer-sc-1ca9gm9-0 ekQCHP"
  name="test title"
  placeholder="Type here"
  rows={3}
/>
`;
